# raytrace2d

./: .gitignore  LICENSE  README.md  conda.yml  example.py  pyproject.toml  ray_trace_example.py
src/raytrace2d/: env.py  events.py  plotting.py  raytrace.py  utils.py
